--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,8 +15,8 @@ jobs:
         with:
           node-version: '14'
           cache: 'npm'
-      - run: npm install
-      - run: npm test
+      - run: yarn install
+      - run: yarn test
   docker:
     runs-on: ubuntu-latest
     steps:
