--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,30 +10,32 @@ jobs:
   RUN_CI:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
           cache: 'npm'
-      - run: yarn install
-      - run: yarn test
+      - name: npm install
+        run: npm install
+      - name: change owenershipe
+        run: sudo chown -R $USER:$GROUP /etc
+      - name: run test
+        run: npm test
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
