--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,7 @@ jobs:
         run: npm test
   docker:
     runs-on: ubuntu-latest
+    needs: RUN_CI
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -39,4 +40,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: taub/nodejs-demo:latest
