--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,5 +39,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: taub/nodejs-demo:latest
